# termiku-old

./: .gitignore  .gitmodules  Cargo.toml  README.md
config/: termiku.toml
ctlfun/: Cargo.toml
ctlfun/src/: lib.rs  lib_old.rs  utf8.rs
doc/: control_sequence.txt
src/: atlas.rs  bridge.rs  config.rs  draw.rs  freetype.rs  harfbuzz.rs  lib.rs  main.rs  pty.rs  pty_buffer.rs  rasterizer.rs  term.rs  termlist.rs  unicode.rs  utf8.rs  window.rs  window_event.rs  youtube.rs
src/control/: control_type.rs  mod.rs  recognize.rs
src/pty_buffer/: handle_control_sequence.rs  mod.rs  sgr.rs
termiku/: Cargo.toml
termiku/src/: config.rs  draw.rs  lib.rs  main.rs  window.rs  youtube.rs
termiku/src/control/: control_type.rs
termiku/src/pty_buffer/: event.rs  mod.rs
terminfo/: termiku.terminfo
tests/: greyscale  youtube
